--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -19,7 +19,7 @@
   <input type="checkbox" name="task[status]" value="" id="status">
 
   <label for="date">Date Completed</label>
-  <input type="text" name="task[date]" value="" id="date">
+  <input type="text" name="task[Date.new]" value="" id="date">
 
 
 
