--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,8 @@
 body {
   font-weight: 100;
   font-size: 1.5em;
-  font-style: normal;
-  font-family: courier;
+  font-style: italic;
+  font-family: Mathlete-Skinny;
   text-align: justify;
   text-decoration: none;
   list-style-type: none;
