--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,30 +1,3 @@
 <h1>Edit Task</h1>
 
-<% form_for @task, url: task_path(@task) method: :patch do |f| %>
-<% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-<%= pluralize(@task.errors.count, "error") %> prohibited
-this task from being saved:
-</h2>
-<%else %>
-</h2>
-<p>Task: <%= f.text_field 'task' %></p>
-<p>Id: <%= f.text_field  'id' %></p>
-<p>Description: <%= :task, Task.all, :id, :task%></p>
- %></p>
-<p>Description<br/>
-<p>Description<br/>
-
-<%= f.text_area 'description' %></p>
-<%= f.submit "Save changes" %>
-<% end %>
-
-<%= link_to 'Back', {:action => 'list' } %>
-<h1>Editing article</h1>
-
-
-
-
-
-<%= link_to 'Back', articles_path %> -->
+hello
