--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,32 @@
 <h1>Edit Task</h1>
 
-hello
+<% form_for @task, url: edit_path(@task) method: :get do |f| %>
+<% if @task.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+<%= pluralize(@task.errors.count, "error") %> prohibited
+this task from being saved:
+</h2>
+<ul>
+        <% @task.errors.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+    <p>
+
+<p> <%= f.label :name %></p>
+<p> <%= f.text_field :name %></p>
+
+<p> <%= f.label :description %></p>
+<p> <%= f.text_field :description %></p>
+
+<p> <%= f.label :status %></p>
+<p> <%= f.text_field :status %></p>
+
+<p> <%= f.label :date %></p>
+<p> <%= f.text_field :date %></p>
+<p><%= f.submit "Save changes" %></p>
+<% end %>
+
+<%= link_to 'Back', tasks_path %>
