--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,7 +16,7 @@
   <h2 class="link"><%= link_to "Edit", edit_path(t) %></h2>
   <p><%= t.name %>
   <%= t.description %>
-  <%= t.status %>
+  <%= t.status ? "completed" : "incomplete" %>
   <%= t.date %></p>
 <h2 class="link"><%= link_to "Delete", task_path(t), method: :delete, data: { confirm: 'Are you certain you want to delete this?' } %></h2>
     </article>
