Still working on the 'search' method

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 
 <h1 class="title"> Good Afternoon! Toggle the link below to submit a new task</h1>
 <h2 class="link"><%= link_to "Create New Task", tasks_new_path %></h2>
-
+<h2 class="link"><%= link_to "Home", tasks_path%></h2>
 
 
 
