--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,34 +27,7 @@ body {
   background: linear-gradient(to left, #fc00ff , #00dbde);
 }
 =======
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
 
- body {
-     font-weight: 100;
-     font-size: 1.5em;
-     font-style: normal;
-     font-family: courier;
-     text-align: justify;
-     text-decoration: none;
-     list-style-type: none;
-     background-color: background: #fc00ff; /* fallback for old browsers */
-     background: -webkit-linear-gradient(to left, #fc00ff , #00dbde); /* Chrome 10-25, Safari 5.1-6 */
-     background: linear-gradient(to left, #fc00ff , #00dbde);
-    }
->>>>>>> Stashed changes
 
 ul li{
   list-style-type: none;
@@ -62,7 +35,6 @@ ul li{
 }
 
 @font-face {
-<<<<<<< Updated upstream
   font-family: Mathlete-Bulky;
   src: url(mathlete/Mathlete-Bulky.otf);
 }
@@ -79,36 +51,9 @@ ul li{
   src: url(mathlete/Mathlete-SkinnySlant.otf);
 }
 @font-face {
-  font-family: AlexBrush-Regular;
-  src: url(./fonts/alex-brush/AlexBrush-Regular.ttf)
-}
-@font-face {
-  font-family: JosefinSlab-Thin;
-  src: url(./fonts/josefin-slab/JosefinSlab-Thin.ttf)
-}
-
-font-family: Raleway-LightItalic;
-src: url(./fonts/raleway/Raleway-LightItalic.ttf)
-}
-@font-face {
   font-family: Lekton-Italic;
   src: url(./fonts/lekton/Lekton-Italic.ttf)
-=======
-	font-family: Mathlete-Bulky;
-	src: url(mathlete/Mathlete-Bulky.otf);
-}
-@font-face {
-    font-family: Mathlete-BulkySlant;
-    src: url(mathlete/Mathlete-BulkySlant.otf);
-}
-@font-face {
-	font-family: Mathlete-Skinny;
-	src: url(mathlete/Mathlete-Skinny.otf);
-}
-@font-face {
-	font-family: Mathlete-SkinnySlant;
-	src: url(mathlete/Mathlete-SkinnySlant.otf);
-}
+
 @font-face {
     font-family: AlexBrush-Regular;
     src: url(./fonts/alex-brush/AlexBrush-Regular.ttf)
@@ -120,11 +65,6 @@ src: url(./fonts/raleway/Raleway-LightItalic.ttf)
 @font-face {
     font-family: Raleway-LightItalic;
     src: url(./fonts/raleway/Raleway-LightItalic.ttf)
-}
-@font-face {
-    font-family: Lekton-Italic;
-    src: url(./fonts/lekton/Lekton-Italic.ttf)
->>>>>>> Stashed changes
 }
 
 p{
@@ -189,7 +129,7 @@ li a{
 }
 
 article {
-    border-bottom: papayawhip solid thin;
+    border-bottom: white solid thin;
     width: 200px;
 }
 
@@ -204,16 +144,13 @@ li a{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: papayawhip;
->>>>>>> Stashed changes
-}
+    background-color: papayawhip;}
 .link {
   font-family: Raleway-LightItalic;
   text-decoration: underline;
 }
 
 a:-webkit-any-link {
-<<<<<<< Updated upstream
   color: #18ffff
   text-decoration: underline;
   display: block;
@@ -223,17 +160,10 @@ a:-webkit-any-link {
 }
 
 a:hover {
-  background-color: #90caf9;
-=======
+    background-color: #90caf9;
     color: #18ffff
-    text-decoration: underline;
     display: block;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
-
-a:hover {
-    background-color: #90caf9;
->>>>>>> Stashed changes
 }
