--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,32 +1,23 @@
-<h1>Edit Task</h1>
 
-<% form_for @task, url: edit_path(@task) method: :get do |f| %>
-<% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-<%= pluralize(@task.errors.count, "error") %> prohibited
-this task from being saved:
-</h2>
-<ul>
-        <% @task.errors.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-    <p>
+<h1> Edit Task </h1>
+<h2 class="link"><%= link_to "back", tasks_path%></h2>
+<form action="/tasks/update" method="patch" accept-charset="utf-8">
 
-<p> <%= f.label :name %></p>
-<p> <%= f.text_field :name %></p>
+  <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 
-<p> <%= f.label :description %></p>
-<p> <%= f.text_field :description %></p>
+  <label for="name">Name</label>
+  <input type="text" name="task[name]" value="" id="name">
 
-<p> <%= f.label :status %></p>
-<p> <%= f.text_field :status %></p>
+  <label for="description">Description</label>
+  <input type="text" name="task[description]" value="" id="description">
 
-<p> <%= f.label :date %></p>
-<p> <%= f.text_field :date %></p>
-<p><%= f.submit "Save changes" %></p>
-<% end %>
+  <label for="status">Completed</label>
+  <input type="checkbox"  name="task[status]" value="true" id="status">
 
-<%= link_to 'Back', tasks_path %>
+  <label for="date">Date Completed</label>
+  <input type="date" name="task[date]" id="date">
+
+
+
+  <input type="submit" value="Submit">
+</form>
