--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,28 +1,9 @@
 
+<h1> New Task:</h1>
 
 
+<div>
+    <%= render "form" %>
+  <div>
 
-
-
-
-<form
-  action="/tasks" method="post" accept-charset="utf-8">
-
-  <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-
-  <label for="name">Name</label>
-  <input type="text" name="task[name]" value="" id="name">
-
-  <label for="description">Description</label>
-  <input type="text" name="task[description]" value="" id="description">
-
-  <label for="status">Completed</label>
-  <input type="checkbox"  name="task[status]" value="true" id="status">
-
-  <label for="date">Date Completed</label>
-  <input type="date" name="task[date]" id="date">
-
-
-
-  <input type="submit" value="Submit">
-</form>
+<h2 class="link"><%= link_to "back", tasks_path%></h2>
