--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,12 +1,17 @@
 
+
+<h2 class="link"><%= link_to "back", tasks_path%></h2>
+
 <h1> Which Task (by id) Would You Like To See? </h1>
-<h2><%= text_field_tag "", :id %><h2>
+<h2><%= form_for 'search' do |f| %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<%end %>
 
 <ul>
   <li> name: <%= @task.name %> </li>
   <li> description: <%= @task.description %> </li>
-  <li> status: <%= @task.status ? "completed" : "incomplete"%></li>
+  <li> status: <%= @task.status ? "completed" : "incomplete" %></li>
   <li> date completed: <%= @task.date %> </li>
-  <h2 class="link"><%= link_to "back", tasks_path%></h2>
-  <h2 class="link"><%= link_to 'Edit', tasks_edit_path(@task) %></h2>
 </ul>
