--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,23 +1,5 @@
+<h1> New Task:</h1>
 
-<h1> Edit Task </h1>
+    <%= render partial: "form", locals: {http_method: :patch} %>
+
 <h2 class="link"><%= link_to "back", tasks_path%></h2>
-<form action="/tasks/update" method="patch" accept-charset="utf-8">
-
-  <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-
-  <label for="name">Name</label>
-  <input type="text" name="task[name]" value="" id="name">
-
-  <label for="description">Description</label>
-  <input type="text" name="task[description]" value="" id="description">
-
-  <label for="status">Completed</label>
-  <input type="checkbox"  name="task[status]" value="true" id="status">
-
-  <label for="date">Date Completed</label>
-  <input type="date" name="task[date]" id="date">
-
-
-
-  <input type="submit" value="Submit">
-</form>
