--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,9 +1,6 @@
 
 <h1> New Task:</h1>
 
-
-<div>
-    <%= render "form" %>
-  <div>
+  <%= render partial: "form", locals: {http_method: :post} %>
 
 <h2 class="link"><%= link_to "back", tasks_path%></h2>
