--- a/app/views/tasks/update.html.erb
+++ b/app/views/tasks/update.html.erb
@@ -1,3 +1,3 @@
 
-<h1> Task Successfully Updated </h1>
+<h1> Uh oh, something went wrong </h1>
 <h2 class="link"><%= link_to "back", tasks_path%></h2>
