--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,11 +22,15 @@ body {
   text-align: justify;
   text-decoration: none;
   list-style-type: none;
-  background-color: background: #fc00ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #fc00ff , #00dbde); /* Chrome 10-25, Safari 5.1-6 */
+  background-color: #fc00ff;
+  background: -webkit-linear-gradient(to left, #fc00ff , #00dbde);
   background: linear-gradient(to left, #fc00ff , #00dbde);
 }
-=======
+
+  li a{
+    list-style-type: none;
+    text-decoration: none;
+  }
 
 
 ul li{
@@ -34,14 +38,6 @@ ul li{
   text-decoration: none;
 }
 
-@font-face {
-  font-family: Mathlete-Bulky;
-  src: url(mathlete/Mathlete-Bulky.otf);
-}
-@font-face {
-  font-family: Mathlete-BulkySlant;
-  src: url(mathlete/Mathlete-BulkySlant.otf);
-}
 @font-face {
   font-family: Mathlete-Skinny;
   src: url(mathlete/Mathlete-Skinny.otf);
@@ -52,73 +48,37 @@ ul li{
 }
 @font-face {
   font-family: Lekton-Italic;
-  src: url(./fonts/lekton/Lekton-Italic.ttf)
+  src: url(./fonts/lekton/Lekton-Italic.ttf);
 
-@font-face {
+  @font-face {
     font-family: AlexBrush-Regular;
-    src: url(./fonts/alex-brush/AlexBrush-Regular.ttf)
-}
-@font-face {
+    src: url(./fonts/alex-brush/AlexBrush-Regular.ttf);
+  }
+  @font-face {
     font-family: JosefinSlab-Thin;
-    src: url(./fonts/josefin-slab/JosefinSlab-Thin.ttf)
-}
-@font-face {
-    font-family: Raleway-LightItalic;
-    src: url(./fonts/raleway/Raleway-LightItalic.ttf)
-}
+    src: url(./fonts/josefin-slab/JosefinSlab-Thin.ttf);
+  }
 
-p{
-  text-align: left;
-  font-size: 2rem;
-  color: black;
-  margin-bottom: 5px;
-  margin-left: 5px;
-  width: 300px;
-  font-family: Mathlete-Skinny;
-  font-weight: 200;
-}
+  p{
+    text-align: left;
+    font-size: 2rem;
+    color: black;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    width: 300px;
+    font-family: Mathlete-Skinny;
+    font-weight: 200;
+  }
 
-html, body { height: 100%; }
+  html, body { height: 100%; }
 
-.begintask{
-  font-family: Mathlete-Skinny;
-  font-weight: 200;
-  font-size: 3rem;
-}
+  .title{
+    font-family: AlexBrush-Regular;
+    text-align: center;
+  }
 
-.title{
-  font-family: AlexBrush-Regular;
-  text-align: center;
-}
-.img {
-<<<<<<< Updated upstream
-  position: relative;
-  float: left;
-  width:  100px;
-  height: 100px;
-  background-position: 50% 50%;
-  background-repeat:   no-repeat;
-  background-size:     cover;
-}
+  .img {
 
-article {
-  border-bottom: papayawhip solid thin;
-  width: 200px;
-}
-
-li a{
-  list-style-type: none;
-  text-decoration: none;
-}
-
-.navigation {
-  z-index: 30;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: papayawhip;
-=======
     position: relative;
     float: left;
     width:  100px;
@@ -126,44 +86,36 @@ li a{
     background-position: 50% 50%;
     background-repeat:   no-repeat;
     background-size:     cover;
-}
+  }
 
-article {
-    border-bottom: white solid thin;
-    width: 200px;
-}
-
-li a{
-    list-style-type: none;
-    text-decoration: none;
-}
-
-.navigation {
+  .navigation {
     z-index: 30;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: papayawhip;}
-.link {
-  font-family: Raleway-LightItalic;
-  text-decoration: underline;
-}
+    background-color: papayawhip;
+  }
 
-a:-webkit-any-link {
-  color: #18ffff
-  text-decoration: underline;
-  display: block;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+  .link {
+    font-family: Raleway-LightItalic;
+    text-decoration: underline;
+  }
 
-a:hover {
-    background-color: #90caf9;
-    color: #18ffff
+  a:-webkit-any-link {
+    color: #18ffff;
+    text-decoration: underline;
     display: block;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
+  }
+
+    a:hover {
+      background-color: #90caf9;
+      color: #18ffff;
+      display: block;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
